--- a/publications.html
+++ b/publications.html
@@ -94,7 +94,13 @@
 		<img src="images/Journal.png" height="25">
 	</tr></td>
 	<tr><td>
-		<i>Muscle Synergies in Joystick Manipulation.</i> Cai, L., Yan, S., Ouyang C., Zhang, T., Zhu, J., Chen, L., Ma, X.*, and Liu, H.* (2023). Frontiers in Physiology. <br>
+		<i>Understanding Naturalistic Facial Expressions with Deep Learning and Multimodal Large Language Models.</i> Bian, Y., Küster, D., Liu H., and Krumhuber, E. G.* (2024). Sensors, 24(1):126. MDPI.<br>
+		<a href="https://www.researchgate.net/publication/376840648_Understanding_Naturalistic_Facial_Expressions_with_Deep_Learning_and_Multimodal_Large_Language_Models" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.mdpi.com/1424-8220/24/1/126" target="_blank" rel="noopener noreferrer"><img src="images/Sensors.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3390/s24010126" target="_blank" rel="noopener noreferrer">10.3390/s24010126</a>
+	</tr></td>
+	<tr><td>
+		<i>Muscle Synergies in Joystick Manipulation.</i> Cai, L., Yan, S., Ouyang C., Zhang, T., Zhu, J., Chen, L., Ma, X.*, and Liu, H.* (2023). Frontiers in Physiology, 14:1282295. Frontiers Media SA.<br>
 		<a href="https://scholar.google.com/scholar?q=Muscle+Synergies+in+Joystick+Manipulation" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Muscle-synergies-in-joystick-manipulation-Cai-Yan/b8f4cacd594fed0ec79a4f7b966d22673e864719" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/374675206_Muscle_synergies_in_joystick_manipulation" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
@@ -103,7 +109,7 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fphys.2023.1282295" target="_blank" rel="noopener noreferrer">10.3389/fphys.2023.1282295</a>
 	</tr></td>
 	<tr><td>
-		<i>Outlier Detection Using Iterative Adaptive Mini-Minimum Spanning Tree Generation with Applications on Medical Data.</i> Li, J., Li, JW, Wang, C, Verbeek, F.J.*, Schultz T., and Liu H.* (2023). Frontiers in Physiology.<br>
+		<i>Outlier Detection Using Iterative Adaptive Mini-Minimum Spanning Tree Generation with Applications on Medical Data.</i> Li, J., Li, JW, Wang, C, Verbeek, F.J.*, Schultz T., and Liu H.* (2023). Frontiers in Physiology, 14:1233341. Frontiers Media SA.<br>
 		<a href="https://scholar.google.com/scholar?q=Outlier+Detection+Using+Iterative+Adaptive+Mini-Minimum+Spanning+Tree+Generation+with+Applications+on+Medical+Data" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Outlier-detection-using-iterative-adaptive-spanning-Li-Li/fb0fc149b382ef5ce415b44b35ab7352a0eb4b46" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/374675183_Outlier_detection_using_iterative_adaptive_mini-minimum_spanning_tree_generation_with_applications_on_medical_data" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
@@ -112,7 +118,7 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fphys.2023.1233341" target="_blank" rel="noopener noreferrer">10.3389/fphys.2023.1233341</a>
 	</tr></td>
 	<tr><td>
-		<i>Efficient Wi-Fi-Based Human Activity Recognition Using Adaptive Antenna Elimination.</i> Jannat, M.K.A., Islam, M.S., Yang, S-H*, and Liu, H.* (2023). IEEE Access.<br>
+		<i>Efficient Wi-Fi-Based Human Activity Recognition Using Adaptive Antenna Elimination.</i> Jannat, M.K.A., Islam, M.S., Yang, S-H*, and Liu, H.* (2023). IEEE Access, 11:105440-105454.<br>
 		<a href="https://scholar.google.com/scholar?q=Efficient+Wi-Fi-Based+Human+Activity+Recognition+Using+Adaptive+Antenna+Elimination" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Efficient-Wi-Fi-Based-Human-Activity-Recognition-Jannat-Islam/02ff217d1dd6316596fc1da4b8f6a107ee5b7f06" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/374244149_Efficient_Wi-Fi-Based_Human_Activity_Recognition_Using_Adaptive_Antenna_Elimination" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
