--- a/publications.html
+++ b/publications.html
@@ -198,6 +198,17 @@
 		<img src="images/Conference.png" height="25">
 	</tr></td>
 	<tr><td>
+		<img src="images/.png" height="15"> <img src="images/Forthcoming.png" height="20" class = "pop1">
+		<i>Can Electromyography Alone Reveal Facial Action Units? A Pilot EMG-Based Action Unit Recognition Study with Real-Time Validation.</i> Veldanda, A., Liu, H., Koschke, R., Schultz, T., and Küster, D. (2024).  In Proceedings of the 12th International Joint Conference on Biomedical Engineering Systems and Technologies - Volume 1: BIODEVICES, pages ?–?. INSTICC, SciTePress.<br>
+		<!--
+		<a href="" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+		-->
+	</tr></td>
+	<tr><td>
 		<i>On a Real Real-Time Wearable Human Activity Recognition System.</i> Liu, H., Xue, T., and Schultz, T. (2023). In Proceedings of the 16th International Joint Conference on Biomedical Engineering Systems and Technologies - WHC, pages 711-720. INSTICC, SciTePress.<br> 
 		<a href="https://scholar.google.com/scholar?q=on+a+real+real-time+wearable+human+activity+recognition+system" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/On-a-Real-Real-Time-Wearable-Human-Activity-System-Liu-Xue/1c0648a61e011468faf3289fcee39ec66b2a4d43" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
