--- a/publications.html
+++ b/publications.html
@@ -95,7 +95,9 @@
 	</tr></td>
 	<tr><td>
 		<i>Understanding Naturalistic Facial Expressions with Deep Learning and Multimodal Large Language Models.</i> Bian, Y., Küster, D., Liu H., and Krumhuber, E. G.* (2024). Sensors, 24(1):126. MDPI.<br>
-		<a href="https://www.researchgate.net/publication/376840648_Understanding_Naturalistic_Facial_Expressions_with_Deep_Learning_and_Multimodal_Large_Language_Models" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		<a href="https://scholar.google.com/scholar?q=Understanding+Naturalistic+Facial+Expressions+with+Deep+Learning+and+Multimodal+Large+Language+Models" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Understanding-Naturalistic-Facial-Expressions-with-Bian-K%C3%BCster/6dbb5a3f98625d7d090b37ae36dbf3e64d1f1d0e" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/376840648_Understanding_Naturalistic_Facial_Expressions_with_Deep_Learning_and_Multimodal_Large_Language_Models" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.mdpi.com/1424-8220/24/1/126" target="_blank" rel="noopener noreferrer"><img src="images/Sensors.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3390/s24010126" target="_blank" rel="noopener noreferrer">10.3390/s24010126</a>
 	</tr></td>
@@ -199,7 +201,51 @@
 	</tr></td>
 	<tr><td>
 		<img src="images/.png" height="15"> <img src="images/Forthcoming.png" height="20" class = "pop1">
-		<i>Can Electromyography Alone Reveal Facial Action Units? A Pilot EMG-Based Action Unit Recognition Study with Real-Time Validation.</i> Veldanda, A., Liu, H., Koschke, R., Schultz, T., and Küster, D. (2024).  In Proceedings of the 12th International Joint Conference on Biomedical Engineering Systems and Technologies - Volume 1: BIODEVICES, pages ?–?. INSTICC, SciTePress.<br>
+		<i>Comfort Assessment Method Of EEG-Based Exoskeleton Walking-Assistive Device.</i> Zhou, C., Wang, H., Li, K., Liu, H., and Ye, X. (2024).  In Proceedings of the 17th International Joint Conference on Biomedical Engineering Systems and Technologies (BIOSTEC). INSTICC, SciTePress.<br>
+		<!--
+		<a href="" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+		-->
+	</tr></td>
+	<tr><td>
+		<img src="images/.png" height="15"> <img src="images/Forthcoming.png" height="20" class = "pop1">
+		<i>Really Can't Hold On Anymore? Physiological Indicators Versus Self-Reported Motivation Drop During Jogging.</i> Zhang, S., Kolensnikov, S., Rennspieß, T., Porzel, R., Schultz, T., and Liu, H. (2024).  In Proceedings of the 17th International Joint Conference on Biomedical Engineering Systems and Technologies (BIOSTEC). INSTICC, SciTePress.<br>
+		<!--
+		<a href="" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+		-->
+	</tr></td>
+	<tr><td>
+		<img src="images/.png" height="15"> <img src="images/Forthcoming.png" height="20" class = "pop1">
+		<i>Associating Endpoint Accuracy and Similarity of Muscle Synergies.</i> Cai, L., Yan, S., Ouyang, C., Zhang, T., Zhu, J., Chen, L., and Liu, H. (2024).  In Proceedings of the 17th International Joint Conference on Biomedical Engineering Systems and Technologies (BIOSTEC). INSTICC, SciTePress.<br>
+		<!--
+		<a href="" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+		-->
+	</tr></td>
+	<tr><td>
+		<img src="images/.png" height="15"> <img src="images/Forthcoming.png" height="20" class = "pop1">
+		<i>Integrated Driver Pose Estimation for Autonomous Driving。</i> Cao, X., Hu, W., and Liu, H. (2024).  In Proceedings of the 17th International Joint Conference on Biomedical Engineering Systems and Technologies (BIOSTEC). INSTICC, SciTePress.<br>
+		<!--
+		<a href="" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+		-->
+	</tr></td>
+	<tr><td>
+		<img src="images/.png" height="15"> <img src="images/Forthcoming.png" height="20" class = "pop1">
+		<i>Can Electromyography Alone Reveal Facial Action Units? A Pilot EMG-Based Action Unit Recognition Study with Real-Time Validation.</i> Veldanda, A., Liu, H., Koschke, R., Schultz, T., and Küster, D. (2024).  In Proceedings of the 17th International Joint Conference on Biomedical Engineering Systems and Technologies - Volume 1: BIODEVICES, pages ?–?. INSTICC, SciTePress.<br>
 		<!--
 		<a href="" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
