--- a/publications.html
+++ b/publications.html
@@ -94,6 +94,17 @@
 		<img src="images/Journal.png" height="25">
 	</tr></td>
 	<tr><td>
+		<img src="images/.png" height="15"> <img src="images/Forthcoming.png" height="20" class = "pop1">
+		<i>Taxonomy and Real-Time Classification of Artifacts during Biosignal Acquisition: A Starter Study and Dataset of ECG.</i> Liu, H.*, Zhang, S., Gamboa, H., Xue, T., Zhou, C., and Schultz, T. (2024).  In IEEE Sensors Journal.<br>
+		<!--
+		<a href="" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+		-->
+	</tr></td>
+	<tr><td>
 		<i>Understanding Naturalistic Facial Expressions with Deep Learning and Multimodal Large Language Models.</i> Bian, Y., Küster, D., Liu H., and Krumhuber, E. G.* (2024). Sensors, 24(1):126. MDPI.<br>
 		<a href="https://scholar.google.com/scholar?q=Understanding+Naturalistic+Facial+Expressions+with+Deep+Learning+and+Multimodal+Large+Language+Models" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Understanding-Naturalistic-Facial-Expressions-with-Bian-K%C3%BCster/6dbb5a3f98625d7d090b37ae36dbf3e64d1f1d0e" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
