--- a/publications.html
+++ b/publications.html
@@ -257,7 +257,7 @@
 	</tr></td>
 	<tr><td>
 		<img src="images/.png" height="15"> <img src="images/Forthcoming.png" height="20" class = "pop1">
-		<i>Integrated Driver Pose Estimation for Autonomous Driving。</i> Cao, X., Hu, W., and Liu, H. (2024).  In Proceedings of the 17th International Joint Conference on Biomedical Engineering Systems and Technologies (BIOSTEC). INSTICC, SciTePress.<br>
+		<i>Integrated Driver Pose Estimation for Autonomous Driving.</i> Cao, X., Hu, W., and Liu, H. (2024).  In Proceedings of the 17th International Joint Conference on Biomedical Engineering Systems and Technologies (BIOSTEC). INSTICC, SciTePress.<br>
 		<!--
 		<a href="" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
