--- a/research.html
+++ b/research.html
@@ -62,87 +62,18 @@
 
 			<tr><td></td></tr><tr><td></td></tr>
 
-			<tr><td><h1 align="left"><span style="text-decoration: overline">Research Aspects</span></h1></td></tr>
+			<tr><td><h1 align="left"><span style="text-decoration: overline">Research Keywords</span></h1></td></tr>
 			<tr><td><table align="left" cellpadding="15">
-				<tr>
-					<td><b>Biomedical Engineering (BME)</b></td>
-					<td>
-						&#9679; Rehabilitation assistance<br>
-						&#9679; Arthritis and knee bandage<br>
-						&#9679; Mobile phone application for auxiliary medical care<br>
-					</td>
-				</tr>
-				<tr>
-					<td><b>Wearables</b></td>
-					<td>
-						&#9679; (Wireless) Body Sensor Network (WBSN/BSN)<br>
-						&#9679; Body Area Network (BAN)<br>
-						&#9679; Inertial sensors and Inertial Measurement Units (IMU)<br>
-						&#9679; Electromyography (EMG), electrogoniometers (EGM), and other sensors<br>
-						&#9679; Ubiquitous/pervasive computing<br>
-						&#9679; Facial EMG (fEMG) and Action Unit Recognition (AUR)
-					</td>
-				</tr>
-				<tr>
-					<td><b>Digital Signal Processing (DSP)</b></td>
-					<td>
-						&#9679; Multisensorial and multichannel biosignal processing<br>
-						&#9679; Preprocessing and feature extraction<br>
-						&#9679; Time series processing<br>
-						&#9679; <a href="https://tsfel.readthedocs.io/en/latest/" target="_blank" rel="noopener noreferrer">Open-source time series feature extraction library</a><br>
-						&#9679; Biosignals and user interfaces
-					</td>							
-				</tr>
-				<tr>
-					<td><b>Big Data Mining (BDM)<br>Information Retrieval (IR)<br></b></td>
-					<td>
-						&#9679; Multimodal data visualization<br>
-						&#9679; Statistical analysis<br>
-						&#9679; Organization, operation, and post-processing of big data acquisition<br>
-						&#9679; Automatic and semi-automatic segmentation and annotation<br>
-						&#9679; <a href="https://www.uni-bremen.de/en/csl/research/human-activity-recognition" target="_blank" rel="noopener noreferrer">Open-source human activity dataset sharing</a><br>
-						&#9679; <a href="https://tssearch.readthedocs.io/en/latest/" target="_blank" rel="noopener noreferrer">Open-source subsequence search library</a><br>
-						&#9679; Self-similarity matrix (SSM) and novelty search<br>
-					</td>
-				</tr>
-				<tr>
-					<td><b>Machine Learning (ML)<br>Artificial Intelligence (AI)</b></td>
-					<td>
-						&#9679; Feature selection and feature space reduction<br>
-						&#9679; Early fusion and late fusion<br>
-						&#9679; Hidden Markov Model (HMM)<br>
-						&#9679; CNN, RNN, and ResNet<br>
-						&#9679; Model training, decoding, and evaluation<br>
-					</td>
-				</tr>
-				<tr>
-					<td><b>Human Activity Recognition (HAR)</b></td>
-					<td>
-						&#9679; Human Activity Recognition Research Pipeline: <i>HAR-Pipeline</i></a><br>
-						&#9679; Advanced  human activity modeling: <i>Motion Units</i><br>
-						&#9679; HAR Software development: <i>Activity Signal Kit</i> (ASK)<br>
-						&#9679; Mobile HAR Interface development: <i>ASK MobilE</i> (ASKME)<br>
-						&#9679; Real-time end-to-end HAR system: <i>ASK Echtzeit-Dekoder</i> (ASKED)<br>
-						&#9679; On-the-fly HAR add-on: <i>ASK Plug-and-PlAy</i> (ASKPAPA)<br>
-						&#9679; Internal sensing and wearable computing for HAR
-					</td>
-				</tr>
-				<tr>
-					<td><b>Metaverse<br>Virtual/Augmented Reality (VR/AR)<br>Mixed/Extended Reality (MR/XR)</b></td>
-					<td>
-						&#9679; VR/AR/MR Game development for rehabilitation assistance: <i>ASK Game Enginer</i> (AGE)<br>
-						&#9679; Multimodal biosignal acquisition and application in metaverse<br>
-						&#9679; Control and interaction in MR/XR ultilizing wearables<br>				
-					</td>
-				</tr>
-				<tr>
-					<td><b>Music Information Retrieval (MIR)</b></td>
-					<td>
-						&#9679; Feature extraction of melody pitch statistics<br>
-						&#9679; MIR-based amateur singing assistance<br>
-						&#9679; Co-processing of pitch statistics and audio signals<br>
-					</td>
-				</tr>
+				<tr><td>
+					BME, (W)BSN, (W)BAN, Wearables, IMU, (s/f)EMG, EGM (electrogoniometers),<br><br>
+					AI, ML, HMM, UbiComp, HAR, HBR, AUR (action unit recognition), muscle synergy,<br><br>
+					BDM (big data mining), IR (information retrieval), OD (outlier detection),<br><br>
+					SSM (self-similarity matrix), automatic segmentation and annotation,<br><br>
+					Open-source time-series analysis libraries: <a href="https://tsfel.readthedocs.io/en/latest/" target="_blank" rel="noopener noreferrer">feature extraction</a> and <a href="https://tssearch.readthedocs.io/en/latest/" target="_blank" rel="noopener noreferrer">subsequence search,</a><br><br>
+					Open-source multimodal human activity <a href="https://www.uni-bremen.de/en/csl/research/human-activity-recognition" target="_blank" rel="noopener noreferrer">dataset</a>, activity modeling: <i>motion units</i> (MU),<br><br>
+					HCI, CHI, RTS (real-time system), Wi-Fi antennas, metaverse, VR, AR, MR, XR,<br><br>
+					MIR (music information retrieval), folk music, and singing assistance, among others.
+				</td>></tr>
 				
 				<tr><td colspan="2">
 					<iframe width="560" height="315" src="https://www.youtube.com/embed/MseG4XWuGzs" title="Intelligent Knee Bandage for HAR" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -180,11 +111,13 @@
 					</td>
 				</tr>
 				<tr>
-					<td align="center"><a href="https://loop.frontiersin.org/people/1257413/overview" target="_blank" rel="noopener noreferrer">Editorial Board</a></td>
+					<td align="center">Editorial Board</td>
 					<td>
+						<img src="images/IOP.png" height="20" class="pop1"><br>
+						&#9679; Engineering Research Express<br>
 						<img src="images/Frontiers.png" height="25" class="pop1"><br>
-						&#9679; Frontiers in Big Data<br>
-						&#9679; Frontiers in Artificial Intelligence
+						&#9679; <a href="https://loop.frontiersin.org/people/1257413/overview" target="_blank" rel="noopener noreferrer">Frontiers in Big Data</a><br>
+						&#9679; <a href="https://loop.frontiersin.org/people/1257413/overview" target="_blank" rel="noopener noreferrer">Frontiers in Artificial Intelligence</a>
 					</td>
 				</tr>
 				<tr>
