--- a/researchcn.html
+++ b/researchcn.html
@@ -64,87 +64,15 @@
 
 			<tr><td><h1 align="left"><span style="text-decoration: overline">研究领域</span></h1></td></tr>
 			<tr><td><table align="left" cellpadding="15">
-				<tr>
-					<td><b>生物医学工程</b><br>Biomedical Engineering (BME)</td>
-					<td>
-						&#9679; 康复学辅助技术<br>
-						&#9679; 关节炎治疗和膝盖护具<br>
-						&#9679; 辅助医疗的移动应用程序（APP）<br>
-					</td>
-				</tr>
-				<tr>
-					<td><b>可穿戴式传感器</b><br>Wearables</td>
-					<td>
-						&#9679; （无线）生理传感器网络（WBSN/BSN）<br>
-						&#9679; 体域网（BAN）<br>
-						&#9679; 惯性传感器和惯性测量单元（IMU）<br>
-						&#9679; 肌电传感器（EMG）和电子量角器<br>
-						&#9679; 其它生物传感器<br>
-						&#9679; 普适计算<br>
-						&#9679; 面部肌电图（fEMG）和动作单元识别（AUR）
-					</td>
-				</tr>
-				<tr>
-					<td><b>数字信号处理</b><br>Digital Signal Processing (DSP)</td>
-					<td>
-						&#9679; 多信道、多传感器生物医学信号处理<br>
-						&#9679; 预处理技术和特征提取<br>
-						&#9679; 时序信号处理<br>
-						&#9679; <a href="https://tsfel.readthedocs.io/en/latest/" target="_blank" rel="noopener noreferrer">开源时域、统计域和频域特征库开源</a><br>
-						&#9679; 生物医学信号和人机交互界面设计
-					</td>							
-				</tr>
-				<tr>
-					<td><b>大数据挖掘和信息检索</b><br>Big Data Mining (BDM)<br>Information Retrieval (IR)</td>
-					<td>
-						&#9679; 多模数据可视化<br>
-						&#9679; 统计学大数据分析<br>
-						&#9679; 大数据采集的计划、组织和后处理<br>
-						&#9679; 自动和半自动数据分割与标定<br>
-						&#9679; <a href="https://www.uni-bremen.de/en/csl/research/human-activity-recognition" target="_blank" rel="noopener noreferrer">人体动作数据集开源</a><br>
-						&#9679; <a href="https://tssearch.readthedocs.io/en/latest/" target="_blank" rel="noopener noreferrer">子序列搜索算法开源</a><br>
-						&#9679; 自相关矩阵（SSM）和新颖性搜索
-					</td>
-				</tr>
-				<tr>
-					<td><b>机器学习和人工智能</b><br>Machine Learning (ML)<br>Artificial Intelligence (AI)</td>
-					<td>
-						&#9679; 特征选择<br>
-						&#9679; 特征降维<br>
-						&#9679; 早期融合和后期融合<br>
-						&#9679; 隐马尔可夫模型 (HMM)<br>
-						&#9679; 各类人工神经网络<br>
-						&#9679; 模型训练、识别和评估<br>
-					</td>
-				</tr>
-				<tr>
-					<td><b>人体动作识别</b><br>Human Activity Recognition (HAR)</td>
-					<td>
-						&#9679; 提出人体动作识别研究总框架 <i>HAR-Pipeline</i><br>
-						&#9679; 全新人体动作建模法 <i>Motion Units</i><br>
-						&#9679; 人体生物信号采集、处理和识别软件开发 <i>Activity Signal Kit</i> (ASK)<br>
-						&#9679; 移动端人体生物信号采集和识别界面 <i>ASK MobilE</i> (ASKME)<br>
-						&#9679; 实时人体动作识别系统 <i>ASK Echtzeit-Dekoder</i> (ASKED)<br>
-						&#9679; 即插即用的新动作识别 <i>ASK Plug-and-PlAy</i> (ASKPAPA)<br>
-						&#9679; 内部传感和穿戴式计算
-					</td>
-				</tr>
-				<tr>
-					<td><b>元宇宙和虚拟/增强/混合/扩展现实</b><br>Metaverse and Virtual Reality (VR)<br>Augmented Reality (AR)<br>Mixed and Extended Reality (MR/XR)</td>
-					<td>
-						&#9679; VR/AR/MR复健游戏开发 <i>ASK Game Enginer</i> (AGE)<br>
-						&#9679; 元宇宙中人体生物信号的可视化采集、识别和应用<br>
-						&#9679; 利用可穿戴式传感器在MR/XR中进行控制和交互<br>				
-					</td>
-				</tr>
-				<tr>
-					<td><b>音乐信息处理</b><br>Music Information Retrieval (MIR)</td>
-					<td>
-						&#9679; 旋律谱面特征提取<br>
-						&#9679; 基于MIR的业余演唱辅助<br>
-						&#9679; 谱面信息与音频信号的协同处理和研究<br>
-					</td>
-				</tr>
+				<tr><td>
+					生医工 BME、普适计算 UbiComp、人体动作识别 HAR HBR、表情识别 AUR、肌肉协同、<br><br>
+					体域网 (W)BAN (W)BSN、可穿戴 Wearables、惯性传感器 IMU、肌电 (s/f)EMG、测角仪 EGM、<br><br>
+					人工智能 AI、机器学习 ML、隐马尔可夫 HMM、大数据挖掘 BDM、信息检索 IR、离群点检测 OD、<br><br>
+					开源时序信号分析代码库：<a href="https://tsfel.readthedocs.io/en/latest/" target="_blank" rel="noopener noreferrer">特征提取</a> 和 <a href="https://tssearch.readthedocs.io/en/latest/" target="_blank" rel="noopener noreferrer">子序列搜索</a>、自相似 SSM、时序信号自动分割标定、<br><br>
+					开源可穿戴式多模态人体动作数据集：<a href="https://www.uni-bremen.de/en/csl/research/human-activity-recognition" target="_blank" rel="noopener noreferrer">CSL-SHARE</a>、人体动作建模：MU (motion units)、<br><br>
+					人机交互 HCI CHI、实时系统 RTS、元宇宙 Metaverse、虚拟/增加/混合现实 VR AR MR XR、<br><br>
+					音乐信息检索 MIR、传统音乐 folk music、演唱辅助 singing assistance 等。
+				</td></tr>
 
 				<tr><td colspan="2">
 					<video width="560" controls="controls">
@@ -167,11 +95,13 @@
 			<tr><td><h1 align="left"><span style="text-decoration: overline">学术贡献</span></h1></td><tr>
 			<tr><td><table align="left" cellpadding="15">
 				<tr>
-					<td align="center"><a href="https://loop.frontiersin.org/people/1257413/overview" target="_blank" rel="noopener noreferrer">编委（医学和公共健康方向）</a></td>
+					<td align="center">编委</td>
 					<td>
+						<img src="images/IOP.png" height="20" class="pop1"><br>
+						&#9679; Engineering Research Express<br>
 						<img src="images/Frontiers.png" height="25" class="pop1"><br>
-						&#9679; Frontiers in Big Data <br>
-						&#9679; Frontiers in Artificial Intelligence
+						&#9679; <a href="https://loop.frontiersin.org/people/1257413/overview" target="_blank" rel="noopener noreferrer">Frontiers in Big Data</a><br>
+						&#9679; <a href="https://loop.frontiersin.org/people/1257413/overview" target="_blank" rel="noopener noreferrer">Frontiers in Artificial Intelligence</a>
 					</td>
 				</tr>
 				<tr>
