--- a/publications.html
+++ b/publications.html
@@ -116,6 +116,17 @@
 		-->
 	</tr></td>
 	<tr><td>
+		<img src="images/.png" height="15"> <img src="images/Forthcoming.png" height="20" class = "pop1">
+		<i>Robust Human Locomotion and Localization Activity Recognition over Multisensory</i> Khan, D., Alonazi, M., Abdelhaq, M.*, Mudawi, N. A., Algarni, A., Jalal, A.*, Liu, H.* (2024).  In Frontiers in Physiology.<br>
+		<!--
+		<a href="" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+		-->
+	</tr></td>
+	<tr><td>
 		<i>Understanding Naturalistic Facial Expressions with Deep Learning and Multimodal Large Language Models.</i> Bian, Y., Küster, D., Liu H., and Krumhuber, E. G.* (2024). Sensors, 24(1):126. MDPI.<br>
 		<a href="https://scholar.google.com/scholar?q=Understanding+Naturalistic+Facial+Expressions+with+Deep+Learning+and+Multimodal+Large+Language+Models" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Understanding-Naturalistic-Facial-Expressions-with-Bian-K%C3%BCster/6dbb5a3f98625d7d090b37ae36dbf3e64d1f1d0e" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
@@ -388,10 +399,4 @@ s	</tr></td>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://ieeexplore.ieee.org/abstract/document/5963075" target="_blank" rel="noopener noreferrer"><img src="images/IEEE.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1109/icc.2011.5963075" target="_blank" rel="noopener noreferrer">10.1109/icc.2011.5963075</a>
 	</tr></td>
-	<!--
-	<tr><td>
-		<i>Capacity of Ad Hoc Networks with Heterogeneous Traffic Patterns.</i> Liu, H. (2011). In Information Technology, China.<br>
-		<a href="https://www.semanticscholar.org/paper/Capacity-of-Ad-hoc-networks-with-heterogeneous-Liu/a6f42f5a6a814f803df5242bb9d7928cb2609a83#related-papers" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-	</tr></td>
-	!-->
 </table>
