--- a/publications.html
+++ b/publications.html
@@ -117,7 +117,7 @@
 	</tr></td>
 	<tr><td>
 		<img src="images/.png" height="15"> <img src="images/Forthcoming.png" height="20" class = "pop1">
-		<i>Robust Human Locomotion and Localization Activity Recognition over Multisensory</i> Khan, D., Alonazi, M., Abdelhaq, M.*, Mudawi, N. A., Algarni, A., Jalal, A.*, Liu, H.* (2024).  In Frontiers in Physiology.<br>
+		<i>Robust Human Locomotion and Localization Activity Recognition over Multisensory.</i> Khan, D., Alonazi, M., Abdelhaq, M.*, Mudawi, N. A., Algarni, A., Jalal, A.*, Liu, H.* (2024).  In Frontiers in Physiology.<br>
 		<!--
 		<a href="" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
