--- a/publications.html
+++ b/publications.html
@@ -95,17 +95,6 @@
 	</tr></td>
 	<tr><td>
 		<img src="images/.png" height="15"> <img src="images/Forthcoming.png" height="20" class = "pop1">
-		<i>Taxonomy and Real-Time Classification of Artifacts during Biosignal Acquisition: A Starter Study and Dataset of ECG.</i> Liu, H.*, Zhang, S., Gamboa, H., Xue, T., Zhou, C., and Schultz, T. (2024).  In IEEE Sensors Journal.<br>
-		<!--
-		<a href="" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
-		-->
-	</tr></td>
-	<tr><td>
-		<img src="images/.png" height="15"> <img src="images/Forthcoming.png" height="20" class = "pop1">
 		<i>MS2OD: Outlier Detection Using Minimum Spanning Tree and Medoid Selection.</i> Li, J., Li, JW, Wang, C., Verbeek F. J.*, Schultz, T., and Liu, H.* (2024).  In IEEE Sensors Journal.<br>
 		<!--
 		<a href="" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
@@ -125,6 +114,13 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
 		-->
+	</tr></td>
+	<tr><td>
+		<i>Taxonomy and Real-Time Classification of Artifacts during Biosignal Acquisition: A Starter Study and Dataset of ECG.</i> Liu, H.*, Zhang, S., Gamboa, H., Xue, T., Zhou, C., and Schultz, T. (2024).  IEEE Sensors Journal.<br>
+		<a href="https://www.researchgate.net/publication/377731834_Taxonomy_and_Real-Time_Classification_of_Artifacts_during_Biosignal_Acquisition_A_Starter_Study_and_Dataset_of_ECG" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://ieeexplore.ieee.org/document/10415350" target="_blank" rel="noopener noreferrer"><img src="images/IEEE.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=liu2024biosignalartifact&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1109/JSEN.2024.3356651" target="_blank" rel="noopener noreferrer">10.1109/JSEN.2024.3356651</a>
 	</tr></td>
 	<tr><td>
 		<i>Understanding Naturalistic Facial Expressions with Deep Learning and Multimodal Large Language Models.</i> Bian, Y., Küster, D., Liu H., and Krumhuber, E. G.* (2024). Sensors, 24(1):126. MDPI.<br>
