--- a/reviewer.html
+++ b/reviewer.html
@@ -56,6 +56,7 @@
 		&#9679; Foods<br>
 		&#9679; Informatics<br>
 		&#9679; Information<br>
+		&#9679; Journal of Marine Science and Engineering<br>
 		&#9679; Journal of Personalized Medicine<br>
 		&#9679; Machines<br>
 		&#9679; Micromachines<br>
