--- a/publications.html
+++ b/publications.html
@@ -10,7 +10,7 @@
 <table align="left" cellpadding="15">
 	<!--
 	<tr><td>
-		<img src="images/.png" height="15"> <img src="images/Forthcoming.png" height="20" class = "pop1">
+		<img src="images/Forthcoming.png" height="20" class = "pop1">
 		<i>Paper.</i> Name<br>
 		<!--
 		<a href="" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
@@ -94,18 +94,7 @@
 		<img src="images/Journal.png" height="25">
 	</tr></td>
 	<tr><td>
-		<img src="images/.png" height="15"> <img src="images/Forthcoming.png" height="20" class = "pop1">
-		<i>MS2OD: Outlier Detection Using Minimum Spanning Tree and Medoid Selection.</i> Li, J., Li, JW, Wang, C., Verbeek F. J.*, Schultz, T., and Liu, H.* (2024).  In IEEE Sensors Journal.<br>
-		<!--
-		<a href="" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
-		-->
-	</tr></td>
-	<tr><td>
-		<img src="images/.png" height="15"> <img src="images/Forthcoming.png" height="20" class = "pop1">
+		<img src="images/Forthcoming.png" height="20" class = "pop1">
 		<i>Robust Human Locomotion and Localization Activity Recognition over Multisensory.</i> Khan, D., Alonazi, M., Abdelhaq, M.*, Mudawi, N. A., Algarni, A., Jalal, A.*, Liu, H.* (2024).  In Frontiers in Physiology.<br>
 		<!--
 		<a href="" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
@@ -116,8 +105,16 @@
 		-->
 	</tr></td>
 	<tr><td>
-		<i>Taxonomy and Real-Time Classification of Artifacts during Biosignal Acquisition: A Starter Study and Dataset of ECG.</i> Liu, H.*, Zhang, S., Gamboa, H., Xue, T., Zhou, C., and Schultz, T. (2024).  IEEE Sensors Journal.<br>
-		<a href="https://www.researchgate.net/publication/377731834_Taxonomy_and_Real-Time_Classification_of_Artifacts_during_Biosignal_Acquisition_A_Starter_Study_and_Dataset_of_ECG" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		<i>MS2OD: Outlier Detection Using Minimum Spanning Tree and Medoid Selection.</i> Li, J., Li, JW, Wang, C., Verbeek F. J.*, Schultz, T., and Liu, H.* (2024). Machine Learning: Science and Technology. IOPscience<br>
+		<a href="https://iopscience.iop.org/article/10.1088/2632-2153/ad2492" target="_blank" rel="noopener noreferrer"><img src="images/IOP.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=li2024ms2od&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1088/2632-2153/ad2492" target="_blank" rel="noopener noreferrer">10.1088/2632-2153/ad2492</a>
+	</tr></td>
+	<tr><td>
+		<i>Taxonomy and Real-Time Classification of Artifacts during Biosignal Acquisition: A Starter Study and Dataset of ECG.</i> Liu, H.*, Zhang, S., Gamboa, H., Xue, T., Zhou, C., and Schultz, T. (2024). IEEE Sensors Journal.<br>
+		<a href="https://scholar.google.com/scholar?q=axonomy+and+Real-Time+Classification+of+Artifacts+during+Biosignal+Acquisition%3A+A+Starter+Study+and+Dataset+of+ECG" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="hhttps://www.semanticscholar.org/paper/Taxonomy-and-Real-Time-Classification-of-Artifacts-Liu-Zhang/e499518389b2b51b5f4b2a41610f7cf7037818be" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/377731834_Taxonomy_and_Real-Time_Classification_of_Artifacts_during_Biosignal_Acquisition_A_Starter_Study_and_Dataset_of_ECG" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://ieeexplore.ieee.org/document/10415350" target="_blank" rel="noopener noreferrer"><img src="images/IEEE.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=liu2024biosignalartifact&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1109/JSEN.2024.3356651" target="_blank" rel="noopener noreferrer">10.1109/JSEN.2024.3356651</a>
@@ -230,7 +227,7 @@
 		<img src="images/Conference.png" height="25">
 	</tr></td>
 	<tr><td>
-		<img src="images/.png" height="15"> <img src="images/Forthcoming.png" height="20" class = "pop1">
+		<img src="images/Forthcoming.png" height="20" class = "pop1">
 		<i>Comfort Assessment Method of EEG-Based Exoskeleton Walking-Assistive Device.</i> Zhou, C., Wang, H., Li, K., Liu, H., and Ye, X. (2024).  In Proceedings of the 17th International Joint Conference on Biomedical Engineering Systems and Technologies (BIOSTEC). INSTICC, SciTePress.<br>
 		<!--
 		<a href="" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
@@ -241,7 +238,7 @@
 		-->
 	</tr></td>
 	<tr><td>
-		<img src="images/.png" height="15"> <img src="images/Forthcoming.png" height="20" class = "pop1">
+		<img src="images/Forthcoming.png" height="20" class = "pop1">
 		<i>Really Can't Hold on Anymore? Physiological Indicators Versus Self-Reported Motivation Drop During Jogging.</i> Zhang, S., Kolensnikov, S., Rennspieß, T., Porzel, R., Schultz, T., and Liu, H. (2024).  In Proceedings of the 17th International Joint Conference on Biomedical Engineering Systems and Technologies (BIOSTEC). INSTICC, SciTePress.<br>
 		<!--
 		<a href="" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
@@ -252,7 +249,7 @@
 		-->
 	</tr></td>
 	<tr><td>
-		<img src="images/.png" height="15"> <img src="images/Forthcoming.png" height="20" class = "pop1">
+		<img src="images/Forthcoming.png" height="20" class = "pop1">
 		<i>Associating Endpoint Accuracy and Similarity of Muscle Synergies.</i> Cai, L., Yan, S., Ouyang, C., Zhang, T., Zhu, J., Chen, L., and Liu, H. (2024).  In Proceedings of the 17th International Joint Conference on Biomedical Engineering Systems and Technologies (BIOSTEC). INSTICC, SciTePress.<br>
 		<!--
 		<a href="" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
@@ -263,7 +260,7 @@
 		-->
 	</tr></td>
 	<tr><td>
-		<img src="images/.png" height="15"> <img src="images/Forthcoming.png" height="20" class = "pop1">
+		<img src="images/Forthcoming.png" height="20" class = "pop1">
 		<i>Integrated Driver Pose Estimation for Autonomous Driving.</i> Cao, X., Hu, W., and Liu, H. (2024).  In Proceedings of the 17th International Joint Conference on Biomedical Engineering Systems and Technologies (BIOSTEC). INSTICC, SciTePress.<br>
 		<!--
 		<a href="" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
@@ -274,7 +271,7 @@
 		-->
 	</tr></td>
 	<tr><td>
-		<img src="images/.png" height="15"> <img src="images/Forthcoming.png" height="20" class = "pop1">
+		<img src="images/Forthcoming.png" height="20" class = "pop1">
 		<i>Can Electromyography Alone Reveal Facial Action Units? A Pilot EMG-Based Action Unit Recognition Study with Real-Time Validation.</i> Veldanda, A., Liu, H., Koschke, R., Schultz, T., and Küster, D. (2024).  In Proceedings of the 17th International Joint Conference on Biomedical Engineering Systems and Technologies - Volume 1: BIODEVICES, pages ?–?. INSTICC, SciTePress.<br>
 		<!--
 		<a href="" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
