--- a/reviewer.html
+++ b/reviewer.html
@@ -18,7 +18,6 @@
 		<br>
 		<img src="images/Elsevier.png" height="20" class="pop1"> <img src="images/ScienceDirect.png" height="20" class="pop1"><br>
 		&#9679; Biomedical Signal Processing and Control<br>
-		&#9679; IFAC Journal of Systems and Control<br>		
 		<br>
 		<img src="images/IOP.png" height="20"><br>
 		<a href="images/IOP_Certificate.png" target="_blank" rel="noopener noreferrer"><b>IOP Trusted Reviewer</b></a> in recognition of <i>an exceptionally high level of peer review competency</i><br>
@@ -27,7 +26,7 @@
 		&#9679; Engineering Research Express<br>
 		<br>
 		<img src="images/Frontiers.png" height="25" class="pop1"><br>
-		&#9679; Frontiers in Physilogy<br>
+		&#9679; Frontiers in Physiology<br>
 		&#9679; Frontiers in Bioengineering and Biotechnology<br>
 		&#9679; Frontiers in Medicine<br>
 		&#9679; Frontiers in Big Data<br>
