--- a/research.html
+++ b/research.html
@@ -115,7 +115,7 @@
 					<img src="images/Chapter.png" height="25">
 				</tr></td>
 				<tr><td>
-					<i>High-Level Features for Human Activity Recognition and Modeling</i> Hartmann, Y., Liu, H., and Schultz, T. (2023). Biomedical Engineering Systems and Technologies. Springer Nature Switzerland.<br>
+					<i>High-Level Features for Human Activity Recognition and Modeling.</i> Hartmann, Y., Liu, H., and Schultz, T. (2023). Biomedical Engineering Systems and Technologies. Springer Nature Switzerland.<br>
 					<a href="https://scholar.google.com/scholar?q=High-Level+Features+for+Human+Activity+Recognition+and+Modeling" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/High-Level-Features-for-Human-Activity-Recognition-Hartmann-Liu/d247cc3dbe4ea9673b8f2bebdd62a10eef42d978" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/372525464_High-Level_Features_for_Human_Activity_Recognition_and_Modeling" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
@@ -174,7 +174,7 @@
 					-->
 				</tr></td>
 				<tr><td>
-					<i>MS2OD: Outlier Detection Using Minimum Spanning Tree and Medoid Selection.</i> Li, J., Li, JW, Wang, C., Verbeek F. J.*, Schultz, T., and Liu, H.* (2024). Machine Learning: Science and Technology. IOPscience<br>
+					<i>MS2OD: Outlier Detection Using Minimum Spanning Tree and Medoid Selection.</i> Li, J., Li, JW, Wang, C., Verbeek F. J.*, Schultz, T., and Liu, H.* (2024). Machine Learning: Science and Technology. IOPscience.<br>
 					<a href="https://scholar.google.com/scholar?q=MS2OD%3A+Outlier+Detection+Using+Minimum+Spanning+Tree+and+Medoid+Selection" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/377861624_MS2OD_Outlier_Detection_Using_Minimum_Spanning_Tree_and_Medoid_Selection" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://iopscience.iop.org/article/10.1088/2632-2153/ad2492" target="_blank" rel="noopener noreferrer"><img src="images/IOP.png" height="15"></a>
@@ -444,7 +444,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=liu2019realtimehar&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.5220/0007398800470055" target="_blank" rel="noopener noreferrer">10.5220/0007398800470055</a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<b>(<a href="https://biostec.scitevents.org/PreviousAwards.aspx#2019" target="_blank" rel="noopener noreferrer">Best Paper Award</a>, Student Author)</b>
-			s	</tr></td>
+				</tr></td>
 				<tr><td>
 					<i>ASK: A Framework for Data Acquisition and Activity Recognition.</i> Liu, H., and Schultz, T. (2018). In Proceedings of the 11th International Joint Conference on Biomedical Engineering Systems and Technologies - Volume 3: BIOSIGNALS, pages 262–268. INSTICC, SciTePress.
 					<br>
