--- a/research.html
+++ b/research.html
@@ -470,6 +470,16 @@
 			<tr><td><h1 align="left"><span style="text-decoration: overline">Academic Contributions and Activities</span></h1></td><tr>
 			<tr><td><table align="left" cellpadding="15">
 				<tr>
+					<td align="center">Editorial Board</td>
+					<td>
+						<img src="images/IOP.png" height="20" class="pop1"><br>
+						&#9679; <a href="https://publishingsupport.iopscience.iop.org/journals/engineering-research-express/editorial-board/" target="_blank" rel="noopener noreferrer">Engineering Research Express</a><br>
+						<img src="images/Frontiers.png" height="25" class="pop1"><br>
+						&#9679; <a href="https://loop.frontiersin.org/people/1257413/overview" target="_blank" rel="noopener noreferrer">Frontiers in Big Data</a><br>
+						&#9679; <a href="https://loop.frontiersin.org/people/1257413/overview" target="_blank" rel="noopener noreferrer">Frontiers in Artificial Intelligence</a>
+					</td>
+				</tr>
+				<tr>
 					<td align="center">Guest Editor</td>
 					<td>
 						<img src="images/MDPI.png" height="25"><br>
@@ -483,16 +493,6 @@
 					<td>
 						<img src="images/Frontiers.png" height="25" class="pop1"><br>
 						&#9679; Frontiers in Behavioral Neuroscience<br>
-					</td>
-				</tr>
-				<tr>
-					<td align="center">Editorial Board</td>
-					<td>
-						<img src="images/IOP.png" height="20" class="pop1"><br>
-						&#9679; Engineering Research Express<br>
-						<img src="images/Frontiers.png" height="25" class="pop1"><br>
-						&#9679; <a href="https://loop.frontiersin.org/people/1257413/overview" target="_blank" rel="noopener noreferrer">Frontiers in Big Data</a><br>
-						&#9679; <a href="https://loop.frontiersin.org/people/1257413/overview" target="_blank" rel="noopener noreferrer">Frontiers in Artificial Intelligence</a>
 					</td>
 				</tr>
 				<tr>
