--- a/researchcn.html
+++ b/researchcn.html
@@ -473,7 +473,7 @@
 					<td align="center">编委</td>
 					<td>
 						<img src="images/IOP.png" height="20" class="pop1"><br>
-						&#9679; Engineering Research Express<br>
+						&#9679; <a href="https://publishingsupport.iopscience.iop.org/journals/engineering-research-express/editorial-board/" target="_blank" rel="noopener noreferrer">Engineering Research Express</a><br>
 						<img src="images/Frontiers.png" height="25" class="pop1"><br>
 						&#9679; <a href="https://loop.frontiersin.org/people/1257413/overview" target="_blank" rel="noopener noreferrer">Frontiers in Big Data</a><br>
 						&#9679; <a href="https://loop.frontiersin.org/people/1257413/overview" target="_blank" rel="noopener noreferrer">Frontiers in Artificial Intelligence</a>
