--- a/researchcn.html
+++ b/researchcn.html
@@ -500,7 +500,14 @@
 					<td>
 						<a href="https://biostec.scitevents.org/?y=2024" target="_blank" rel="noopener noreferrer"><img src="images/BIOSTEC2024.png" height="23" class="pop1"></a> &nbsp
 						<a href="https://biosignals.scitevents.org/?y=2024" target="_blank" rel="noopener noreferrer"><img src="images/BIOSIGNALS2024.png" height="23" class="pop1"></a><br>
-						&#9679; BIOSIGNALS2024 - 17<sup>th</sup> International Conference on Bio-Inspired Systems and Signal Processing (in BIOSTEC 2024), Rome, Itaty<br>
+						&#9679; BIOSIGNALS2024 - 17<sup>th</sup> International Conference on Bio-Inspired Systems and Signal Processing (in BIOSTEC 2024), Rome, Itaty
+					</td>
+				</tr>
+				<tr>
+					<td align="center">学术会议 Area Chair</td>
+					<td>
+						<a href="https://e-nns.org/icann2024/" target="_blank" rel="noopener noreferrer"><img src="images/ICANN2024.png" height="23" class="pop1"></a><br>
+						&#9679; BIOSIGNALS2024 - 33<sup>rd</sup> International Conference on Artificial Neural Networks, Lugano, Switzerland
 					</td>
 				</tr>
 				<tr>
