--- a/publications.html
+++ b/publications.html
@@ -107,6 +107,7 @@
 	<tr><td>
 		<i>MS2OD: Outlier Detection Using Minimum Spanning Tree and Medoid Selection.</i> Li, J., Li, JW, Wang, C., Verbeek F. J.*, Schultz, T., and Liu, H.* (2024). Machine Learning: Science and Technology. IOPscience.<br>
 		<a href="https://scholar.google.com/scholar?q=MS2OD%3A+Outlier+Detection+Using+Minimum+Spanning+Tree+and+Medoid+Selection" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/MS2OD%3A-Outlier-Detection-Using-Minimum-Spanning-and-Li-Li/9f2f5a172ec1f1cbd22e522c336282010beeb283" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/377861624_MS2OD_Outlier_Detection_Using_Minimum_Spanning_Tree_and_Medoid_Selection" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://iopscience.iop.org/article/10.1088/2632-2153/ad2492" target="_blank" rel="noopener noreferrer"><img src="images/IOP.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=li2024ms2od&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
