--- a/publications.html
+++ b/publications.html
@@ -112,12 +112,12 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1109/JSEN.2024.3356651" target="_blank" rel="noopener noreferrer">10.1109/JSEN.2024.3356651</a>
 	</tr></td>
 	<tr><td>
-		<i>Robust Human Locomotion and Localization Activity Recognition over Multisensory.</i> Khan, D., Alonazi, M., Abdelhaq, M.*, Mudawi, N. A., Algarni, A., Jalal, A.*, Liu, H.* (2024), 15:1344887. In Frontiers in Physiology.<br>
+		<i>Robust Human Locomotion and Localization Activity Recognition over Multisensory.</i> Khan, D., Alonazi, M., Abdelhaq, M.*, Mudawi, N. A., Algarni, A., Jalal, A.*, Liu, H.* (2024). Frontiers in Physiology, 15:1344887. Frontiers Media SA.<br>
+		<a href="https://scholar.google.de/scholar?q=Robust+Human+Locomotion+and+Localization+Activity+Recognition+over+Multisensory" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		<!--
-		<a href="" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		-->
-		<a href="https://www.researchgate.net/publication/378393968_Robust_human_locomotion_and_localization_activity_recognition_over_multisensory" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/378393968_Robust_human_locomotion_and_localization_activity_recognition_over_multisensory" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/physiology/articles/10.3389/fphys.2024.1344887/full" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=khan2024har&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fphys.2024.1344887" target="_blank" rel="noopener noreferrer">10.3389/fphys.2024.1344887</a>
