--- a/enkas/な.html
+++ b/enkas/な.html
@@ -23,7 +23,7 @@
 <br><hr><br><h1>
 <a id="何でもないわ">【何でもないわ】</a>G1-A2<br>
 <br>
-1 私が<ruby><rb>黙</rb><rt>だま</rt></ruby>って　<ruby><rb>うつむ</rb><rt>うつむ</rt></ruby>くと<br>
+1 私が<ruby><rb>黙</rb><rt>だま</rt></ruby>って　<ruby><rb>俯</rb><rt>うつむ</rt></ruby>くと<br>
 どうかしたのと　聞くあなた<br>
 その胸に甘えたい<br>
 そう、何んでもないわ<br>
