--- a/reviewer.html
+++ b/reviewer.html
@@ -61,6 +61,7 @@
 		&#9679; Micromachines<br>
 		&#9679; Remote Sensing<br>
 		&#9679; Sensors<br>
+		&#9679; Smart Cities<br>
 		&#9679; Sports<br>
 		&#9679; Sustainability<br>
 		<br>
