--- a/publications.html
+++ b/publications.html
@@ -266,11 +266,8 @@
 	</tr></td>
 	<tr><td>
 		<i>Integrated Driver Pose Estimation for Autonomous Driving.</i> Cao, X., Hu, W., and Liu, H. (2024).  In BIOSTEC 2024 - Proceedings of the 17th International Joint Conference on Biomedical Engineering Systems and Technologies - BIOSIGNALS, pages 695-702. INSTICC, SciTePress.<br>
-		<!--
-		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;
-		!-->
-		<a href="https://www.semanticscholar.org/paper/Integrated-Driver-Pose-Estimation-for-Autonomous-Cao-Hu/e6816adff6e19ed4e9e6d8f226bcf0b0713fe2bf" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		<a href="https://scholar.google.com/scholar?q=Integrated+Driver+Pose+Estimation+for+Autonomous+Driving" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Integrated-Driver-Pose-Estimation-for-Autonomous-Cao-Hu/e6816adff6e19ed4e9e6d8f226bcf0b0713fe2bf" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/378485657_Integrated_Driver_Pose_Estimation_for_Autonomous_Driving" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://doi.org/10.5220/0012639400003657" target="_blank" rel="noopener noreferrer"><img src="images/SciTePress.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=cao2024driver_pose&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
