--- a/research.html
+++ b/research.html
@@ -518,7 +518,7 @@
 						&#9679; For 39 international journals, including Nat. Commun., Biomed. Signal Process. Control, Remote Sens., Front. Physiol., Front Bioeng. Biotechnol., Physiol. Meas., Phys. Scr., ISPRS Int. J. Geo-Inf., Biomimetics, and Biosensors<br>
 						&#9679; For various conferences, including IEEE BSN, BHI; ACM ICMI, ISWC, AUTOMOTIVEUI; ITP<br>
 						&#9679; <a href="images/IOP_Certificate.png" target="_blank" rel="noopener noreferrer">IOP Trusted Reviewer</a> in recognition of <i>an exceptionally high level of peer review competency</i><br>
-						&#9679; <a href="https://www.mdpi.com/journal/sensors/awards.pdf/0/pdf_3_2023_5_award_65c605ed3220b.pdf" target="_blank" rel="noopener noreferrer">2023 Outstanding Reviewer Award</a> of Sensors
+						&#9679; <a href="https://www.mdpi.com/journal/sensors/awards/2188" target="_blank" rel="noopener noreferrer">2023 Outstanding Reviewer Award</a> of Sensors
 					</td>
 				</tr>
 				<tr>
