--- a/researchcn.html
+++ b/researchcn.html
@@ -518,7 +518,7 @@
 						&#9679; 39本国际期刊，包括Nat. Commun.、Biomed. Signal Process. Control、Remote Sens.、Front. Physiol.、Front Bioeng. Biotechnol.、Physiol. Meas.、Phys. Scr.、 ISPRS Int. J. Geo-Inf.、Biomimetics、Biosensors<br>
 						&#9679; 多个国际会议, 包括IEEE BSN, BHI; ACM ICMI, ISWC, AUTOMOTIVEUI; ITP<br>
 						&#9679; <a href="images/IOP_Certificate.png" target="_blank" rel="noopener noreferrer">IOP Trusted Reviewer</a> 表彰“极其高水平的同行评审胜任力”（<i>an exceptionally high level of peer review competency</i>）<br>
-						&#9679; Sensors <a href="https://www.mdpi.com/journal/sensors/awards.pdf/0/pdf_3_2023_5_award_65c605ed3220b.pdf" target="_blank" rel="noopener noreferrer">2023 最佳审稿人奖</a>
+						&#9679; Sensors <a href="https://www.mdpi.com/journal/sensors/awards/2188" target="_blank" rel="noopener noreferrer">2023 最佳审稿人奖</a>
 					</td>
 				</tr>
 				<tr>
